# cerebras-mcp-server-github

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
llm_client_server/: __init__.py  client.py  server.py
llm_client_server/data/: company_policies.json
